--- a/style.css
+++ b/style.css
@@ -93,8 +93,8 @@ h2 {
 .testimonial {
     max-width: 40%;
     display: block;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 60px;
+    padding-right: 60px;
     background-color: rgb(25, 41, 88);
     color: white;
 }
@@ -102,6 +102,11 @@ h2 {
 .testimonial__header {
     color: gold;
     letter-spacing: 1px;
+}
+
+.testimonial__text {
+    margin: 0;
+    font-style: italic;
 }
 
 .testimonial__name {
